# upgrading-to-fusion-workshop

./: .gitignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  requirements-dev.txt
.claude/: settings.json
chat/: 2026-03-28_fusion_migration_troubleshooting.md
docs/: index.md  workshop.md
models/marts/exposures/: advanced_exposures.yml
models/marts/finance/: _mart_finance__models.yml  financial_reporting_protected.sql  financial_reporting_with_protected.sql
models/marts/orders/: order_line_items_legacy.sql
