[project]
name = "upgrading-to-fusion-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.10.0",
    "dbt-core==1.10.15",
    "dbt-coverage==0.3.8",
    "dbt-snowflake==1.10.3",
    "elementary-data[snowflake]==0.20.1",
    "numpy==1.26.4",
    "pre-commit==4.0.1",
    "schemachange==3.7.0",
    "shandy-sqlfmt[jinjafmt]==0.23.2",
    "sqlfluff==3.5.0",
]
